--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="main-text">
         
        <h1><span>JELAJAHI CITA RASA</span></h1>
-       <h1>TANPA BATAS</h1>
+       <h1>TANPA AKHIR</h1>
 </div>
        <button>EXPLORE</button>
     
