--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <h1><span>JELAJAHI CITA RASA</span></h1>
        <h1>TANPA AKHIR</h1>
 </div>
-       <button>EXPLORE</button>
+        <a href="#Menu"><button>EXPLORE</button></a>
     
     </header>
 
